# UspWeakness

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
python/: CdclGraphs.py  Graphs.py  Sat.py  USP.py  runtime.csv
src/: CMakeLists.txt  basicsolver.h  cdclsolver.h  dpllsolver.h  main.cpp  usp.cpp  usp.h  uspgenerator.cpp  uspgenerator.h  verifier.h
test/: CMakeLists.txt  tests.cpp
